@@ -326,10 +326,10 @@ private:
                 = nodep->exprp()->dtypep()->dimensions(false);
             UINFO(4, "   PINVAR  " << nodep->modVarp() << endl);
             UINFO(4, "   EXP     " << nodep->exprp() << endl);
-            UINFO(4, "   modwidth ew=" << expwidth << " pw=" << modwidth << "  ed=" << expDim.first
-                                       << "," << expDim.second << "  pd=" << pinDim.first << ","
+            UINFO(4, "   expwidth=" << expwidth << " modwidth=" << modwidth << "  expDim(p,u)=" << expDim.first
+                                       << "," << expDim.second << "  pinDim(p,u)=" << pinDim.first << ","
                                        << pinDim.second << endl);
-            if (expDim.first == pinDim.first && expDim.second == pinDim.second + 1) {
+            if (expDim.second == pinDim.second + 1) {
                 // Connection to array, where array dimensions match the instant dimension
                 const AstRange* const rangep
                     = VN_AS(nodep->exprp()->dtypep(), UnpackArrayDType)->rangep();
