@@ -37,6 +37,7 @@ Verilator 5.017 devel
 * Fix object destruction after a copy constructor (#4540) (#4541). [Ryszard Rozak, Antmicro Ltd.]
 * Fix inlining of real functions miscasting (#4543). [Andrew Nolte]
 * Fix broken link error for enum references (#4551). [Anthony Donlon]
+* Fix instance arrays connecting to array of structs (#4557). [raphmaster]
 * Fix preprocessor to show `line 2 on resumed file.
 
 
